--- a/rd.html
+++ b/rd.html
@@ -1256,7 +1256,7 @@ factor2numeric(y)</code></pre>
 <div id="as.numericsilent" class="section level2">
 <h2>as.numericSilent</h2>
 <h3>
-Silent wrapper for coercing a vector to numeric
+Convert any vector to numeric, if possible
 </h3>
 <h4>
 Usage
@@ -1601,7 +1601,7 @@ Author
 <div id="timestamp" class="section level2">
 <h2>timeStamp</h2>
 <h3>
-Imbeds the present datetime into a file name
+Embeds the present datetime into a file name
 </h3>
 <h4>
 Usage
@@ -1615,13 +1615,13 @@ Arguments
 description
 </dt>
 <dd class="rd-dd">
-Character string giving the base name of the file
+Character vector giving the base name(s) of the file(s)
 </dd>
 <dt>
 extension
 </dt>
 <dd class="rd-dd">
-Character string giving the extension of the file (excluding the period)
+Character vector giving the extension(s) of the file(s) (excluding the period)
 </dd>
 </dl>
 <h4>
@@ -5020,11 +5020,8 @@ Author
 <div id="cumsumna" class="section level2">
 <h2>cumsumNA</h2>
 <h3>
-Computes the cummulative sum of a vector without propogating NAs
+Computes the cummulative sum of a vector without propagating NAs
 </h3>
-<p class="rd-p">
-Computes the cummulative sum of a vector without propogating NA’s.
-</p>
 <h4>
 Usage
 </h4>
@@ -5044,7 +5041,7 @@ An integer or double vector
 Details
 </h4>
 <p class="rd-p">
-If <code>x</code> is integer, then integer addition is used. Otherwise, floating point (double) addition is used.
+If <code>x</code> is integer, then integer addition is used. Otherwise, floating point (double) addition is used. Elements in <code>x</code> that were <code>NA</code> will continue to be <code>NA</code>, but the <code>NA</code> will not be propagated.
 </p>
 <h4>
 Value
@@ -5052,9 +5049,6 @@ Value
 <p class="rd-p">
 <dl>
 The vector of cumulative sums.
-</p>
-<p class="rd-p">
-Elements in <code>x</code> that were <code>NA</code> will continue to be <code>NA</code>, but the <code>NA</code> will not be propogated.
 </dl>
 </p>
 <h4>
@@ -5235,7 +5229,7 @@ integ(dbeta(seq(0, 0.7, length = 401), 2, 5), a = 0, b = 0.7)
 pbeta(0.7, 2, 5)
 
 # f(x) = x^2 from 0 to 3
-integ(seq(0, 3, length=21)^2, a = 0, b = 3)
+integ(seq(0, 3, length = 21)^2, a = 0, b = 3)
 
 # A quadratic function with both methods
 x <- seq(0, 3, length = 51)
