Improve documentation for `hpd()` methods

--- a/rd.html
+++ b/rd.html
@@ -4056,8 +4056,10 @@ Usage
 </h4>
 <pre class="r"><code>hpd(pdf, support, prob = 0.95, cdf = NULL, njobs = 1, checkUnimodal = 0)
 
+## S3 method for class 'hpd'
 print(x, ...)
 
+## S3 method for class 'hpd'
 plot(x, ...)</code></pre>
 <h4>
 Arguments
