--- a/rd.html
+++ b/rd.html
@@ -184,7 +184,7 @@ Sego Miscellaneous
 <strong>Author:</strong> Landon Sego
 </p>
 <p>
-<strong>Version:</strong> 0.3.1
+<strong>Version:</strong> 0.3.2
 </p>
 <p>
 <strong>License:</strong> file LICENSE
@@ -1663,7 +1663,7 @@ The numeric vector to be padded
 num
 </dt>
 <dd class="rd-dd">
-The number of zeros that will be padded. If <code>NULL</code>, the value is chosen based on the longest string in the vector.
+The maximum number of zeros that will be added. If <code>NULL</code>, the value is chosen based on the longest string in the vector.
 </dd>
 <dt>
 side
@@ -1696,8 +1696,8 @@ Character vector with the leading (or trailing) elements padded with zeros.
 Examples
 </h4>
 <pre class="r"><code># Examples with 0's on the left
-padZero(c(1,10,100))
-padZero(c(1,10,100), num = 4)
+padZero(c(1, 10, 100))
+padZero(c(1, 10, 100), num = 4)
 
 # Examples with 0's on the right
 padZero(c(1.2, 1.34, 1.399), side = "r")
