--- a/rd.html
+++ b/rd.html
@@ -4638,13 +4638,13 @@ Character string which uniquely indentifies the type of weights to use, correspo
 furthest.weight
 </dt>
 <dd class="rd-dd">
-A single, positive number corresponding to the unormalized value of the weights at the left and right edges of the window
+A single, positive number corresponding to the unormalized value of the weights at the left and right edges of the window. Ignored when <code>type = uniform</code>.
 </dd>
 <dt>
 center.weight
 </dt>
 <dd class="rd-dd">
-A single, positive number corresponding to the unnormalized value of the weights at the center of the window
+A single, positive number corresponding to the unnormalized value of the weights at the center of the window.
 </dd>
 <dt>
 …
