--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <li><a href="#format-dates-or-datetimes">Format dates or datetimes</a></li>
           <li><a href="#calculate-a-moving-window-dot-product">Calculate a moving window dot product</a></li>
           <li><a href="#moving-average-with-various-kernels">Moving average with various kernels</a></li>
-          <li><a href="#cumulative-sum-charts-cusum">Cumulative sum charts (CUSUM)</a></li>
+          <li><a href="#cumulative-sum-charts-cusum">Cumulative sum charts (Cusum)</a></li>
           <li><a href="#align-two-time-series">Align two time series</a></li>
           <li><a href="#integration-over-time">Integration over time</a></li>
           </ul></li>
@@ -163,7 +163,7 @@
 <div id="content-top"></div>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
-<p>The <code>Smisc</code> package is a collection of functions for statistical computing and data manipulation that I created to facilitate my day-to-day work in R. Each function operates (more or less) on its own, designed for a specific task. As such, there are very few classes or methods in the package.</p>
+<p>The <code>Smisc</code> package is a collection of functions for statistical computing and data manipulation that I created to facilitate my day-to-day work in R. Most functions operate on their own, each designed for a specific task.</p>
 <p>I have organized the documentation into 11 groups of functions that have similar themes. I provide below a brief synopsis of the motivation for each of the functions in the package, leaving the details to the standard help files, which you can find by following the <a href="rd.html">bold blue links</a>.</p>
 <p>—Landon Sego</p>
 <div id="package-installation" class="section level2">
@@ -464,7 +464,7 @@ as.numericSilent(y)</code></pre>
 <h2>Embed a timestamp in a filename</h2>
 <p><code><a target='_blank' href='rd.html#timestamp'>timeStamp()</a></code> embeds a the current date and time into the name of a file.</p>
 <pre class="r"><code>timeStamp(&quot;thisFile&quot;, &quot;txt&quot;)</code></pre>
-<pre><code>[1] &quot;thisFile_2016-05-09_150353.txt&quot;</code></pre>
+<pre><code>[1] &quot;thisFile_2016-05-13_142103.txt&quot;</code></pre>
 </div>
 <div id="pad-a-numeric-value-with-zeros" class="section level2">
 <h2>Pad a numeric value with zeros</h2>
@@ -593,7 +593,7 @@ aFunction(-1, a = 7)</code></pre>
 <h2>Time the execution of an expression</h2>
 <p><code><a target='_blank' href='rd.html#timeit'>timeIt()</a></code> times the execution of an R expression, where the default unit of time depends on how long the expression runs, i.e., if it runs for hours, time is measured in hours; if it runs in seconds, time is measured in seconds, etc.</p>
 <pre class="r"><code>y &lt;- timeIt(mean(rnorm(10^7)))</code></pre>
-<pre><code>0.96 seconds </code></pre>
+<pre><code>0.97 seconds </code></pre>
 <pre class="r"><code>y</code></pre>
 <pre><code>[1] 2.524102e-05</code></pre>
 </div>
@@ -969,14 +969,14 @@ lines(1:50, smooth_x, col = &quot;Blue&quot;, lwd = 3)</code></pre>
 <p><img src="index_files/figure-html/movAvg2_2-1.png" title="" alt="" width="624" /></p>
 </div>
 <div id="cumulative-sum-charts-cusum" class="section level2">
-<h2>Cumulative sum charts (CUSUM)</h2>
-<p><code><a target='_blank' href='rd.html#cusum'>cusum()</a></code> will calculate the CUSUM statistics for a cumulative sum chart of the form <span class="math inline"><em>C</em>[<em>i</em>] = <em>m</em><em>a</em><em>x</em>(0, <em>C</em>[<em>i</em> − 1] + <em>X</em>[<em>i</em>] − <em>k</em>)</span> that signals when <span class="math inline"><em>C</em>[<em>i</em>] &gt; <em>h</em></span>. Here’s a simple example:</p>
-<pre class="r"><code>cusum(rnorm(25), k = 0.2, h = 2)</code></pre>
-<pre><code> [1] 1.42247454 2.03430331 0.16631134 0.65204311 0.00000000 0.00000000
- [7] 0.00000000 0.00000000 0.97013506 0.00000000 1.46913740 0.00000000
-[13] 0.00000000 0.00000000 0.09535299 0.00000000 0.72690149 0.21283481
-[19] 0.00000000 0.09031144 1.28913338 0.84286968 0.72563763 0.74143352
-[25] 2.45526784</code></pre>
+<h2>Cumulative sum charts (Cusum)</h2>
+<p><code><a target='_blank' href='rd.html#cusum'>cusum()</a></code> will calculate the Cusum statistics for a cumulative sum chart of the form <span class="math inline"><em>C</em>[<em>i</em>] = <em>m</em><em>a</em><em>x</em>(0, <em>C</em>[<em>i</em> − 1] + <em>X</em>[<em>i</em>] − <em>k</em>)</span> that signals when <span class="math inline"><em>C</em>[<em>i</em>] &gt; <em>h</em></span>. Here’s a simple example:</p>
+<pre class="r"><code># Calculate the Cusum
+y &lt;- cusum(rnorm(25), k = 0.2, h = 2)
+
+# Plot results
+plot(y, main = &quot;Upper Cusum chart of a standard normal variate&quot;, las = 1)</code></pre>
+<p><img src="index_files/figure-html/cusum-1.png" title="" alt="" width="624" /></p>
 </div>
 <div id="align-two-time-series" class="section level2">
 <h2>Align two time series</h2>
