--- a/rd.html
+++ b/rd.html
@@ -182,16 +182,16 @@ Sego Miscellaneous
 <strong>Authors:</strong> <a href="mailto:Landon.Sego@pnnl.gov">Landon Sego</a> [aut, cre]
 </p>
 <p>
-<strong>Version:</strong> 0.3.4
+<strong>Version:</strong> 0.3.5
 </p>
 <p>
-<strong>License:</strong> file LICENSE
+<strong>License:</strong> BSD_3_clause + file LICENSE
 </p>
 <h4>
 Description
 </h4>
 <p>
-Sego Miscellaneous: A collection of functions for statistical computing and data manipulation in R.
+A collection of functions for statistical computing and data manipulation in R.
 </p>
 <h4>
 Depends
