--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           </ul></li>
           <li><a href="#datasets">Datasets</a></li>
           <li><a href="#citation">Citation</a></li>
+          <li><a href="#acknowledgements">Acknowledgements</a></li>
           </ul>
         </div>
       </div>
@@ -440,7 +441,7 @@ as.numericSilent(y)</code></pre>
 <h2>Embed a timestamp in a filename</h2>
 <p><code><a target='_blank' href='rd.html#timestamp'>timeStamp()</a></code> embeds a the current date and time into the name of a file.</p>
 <pre class="r"><code>timeStamp(&quot;thisFile&quot;, &quot;txt&quot;)</code></pre>
-<pre><code>[1] &quot;thisFile_2016-06-15_215017.txt&quot;</code></pre>
+<pre><code>[1] &quot;thisFile_2016-06-20_183646.txt&quot;</code></pre>
 </div>
 <div id="pad-a-numeric-value-with-zeros" class="section level2">
 <h2>Pad a numeric value with zeros</h2>
@@ -569,7 +570,7 @@ aFunction(-1, a = 7)</code></pre>
 <h2>Time the execution of an expression</h2>
 <p><code><a target='_blank' href='rd.html#timeit'>timeIt()</a></code> times the execution of an R expression, where the default unit of time depends on how long the expression runs, i.e., if it runs for hours, time is measured in hours; if it runs in seconds, time is measured in seconds, etc.</p>
 <pre class="r"><code>y &lt;- timeIt(mean(rnorm(10^7)))</code></pre>
-<pre><code>0.98 seconds </code></pre>
+<pre><code>1 seconds </code></pre>
 <pre class="r"><code>y</code></pre>
 <pre><code>[1] 2.524102e-05</code></pre>
 </div>
@@ -1085,6 +1086,10 @@ linearMap(x, R = c(-1, 0))</code></pre>
 <h1>Citation</h1>
 <p>Please cite the <code>Smisc</code> package using the following reference:</p>
 <p>Sego LH. 2016. Smisc: Sego Miscellaneous. A collection of functions for statistical computing and data manipulation in R. Pacific Northwest National Laboratory. <a href="https://pnnl.github.io/Smisc" class="uri">https://pnnl.github.io/Smisc</a>.</p>
+</div>
+<div id="acknowledgements" class="section level1">
+<h1>Acknowledgements</h1>
+<p>This package was developed with support from the Signature Discovery Initiative at Pacific Northwest National Laboratory, conducted under the Laboratory Directed Research and Development Program at PNNL, a multiprogram national laboratory operated by Battelle for the U.S. Department of Energy.</p>
 </div>
 
 
