--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <title>Smisc</title>
 
-    <script src="assets/jquery-1.11.0/jquery.min.js"></script>
+    <script src="assets/jquery-1.11.3/jquery.min.js"></script>
   <link href="assets/bootstrap-3.3.2/css/bootstrap.min.css" rel="stylesheet" />
   <script src="assets/bootstrap-3.3.2/js/bootstrap.min.js"></script>
   <script src="assets/bootstrap-3.3.2/shim/html5shiv.min.js"></script>
@@ -19,6 +19,9 @@
   <link href="assets/fontawesome-4.3.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="assets/stickykit-1.1.1/sticky-kit.min.js"></script>
   <script src="assets/jqueryeasing-1.3/jquery.easing.min.js"></script>
+  <link href="assets/recliner-0.2.2/recliner.css" rel="stylesheet" />
+  <script src="assets/recliner-0.2.2/recliner.min.js"></script>
+  <script src="assets/recliner-0.2.2/onload.js"></script>
   <link href="assets/packagedocs-0.0.1/pd.css" rel="stylesheet" />
   <script src="assets/packagedocs-0.0.1/pd.js"></script>
   <script src="assets/packagedocs-0.0.1/pd-collapse-toc.js"></script>
@@ -441,7 +444,7 @@ as.numericSilent(y)</code></pre>
 <h2>Embed a timestamp in a filename</h2>
 <p><code><a target='_blank' href='rd.html#timestamp'>timeStamp()</a></code> embeds a the current date and time into the name of a file.</p>
 <pre class="r"><code>timeStamp(&quot;thisFile&quot;, &quot;txt&quot;)</code></pre>
-<pre><code>[1] &quot;thisFile_2016-06-20_183646.txt&quot;</code></pre>
+<pre><code>[1] &quot;thisFile_2016-06-22_223325.txt&quot;</code></pre>
 </div>
 <div id="pad-a-numeric-value-with-zeros" class="section level2">
 <h2>Pad a numeric value with zeros</h2>
@@ -570,7 +573,7 @@ aFunction(-1, a = 7)</code></pre>
 <h2>Time the execution of an expression</h2>
 <p><code><a target='_blank' href='rd.html#timeit'>timeIt()</a></code> times the execution of an R expression, where the default unit of time depends on how long the expression runs, i.e., if it runs for hours, time is measured in hours; if it runs in seconds, time is measured in seconds, etc.</p>
 <pre class="r"><code>y &lt;- timeIt(mean(rnorm(10^7)))</code></pre>
-<pre><code>1 seconds </code></pre>
+<pre><code>0.94 seconds </code></pre>
 <pre class="r"><code>y</code></pre>
 <pre><code>[1] 2.524102e-05</code></pre>
 </div>
@@ -667,8 +670,9 @@ doParallel::registerDoParallel(cl)
 
 # Call plyr::ddply()
 res1 &lt;- plyr::ddply(baseball, ~ year, nrow, .parallel = TRUE)</code></pre>
-<pre><code>Warning: &lt;anonymous&gt;: ... may be used in an incorrect context: &#39;.fun(piece, ...)&#39;</code></pre>
-<pre><code>Warning: &lt;anonymous&gt;: ... may be used in an incorrect context: &#39;.fun(piece, ...)&#39;</code></pre>
+<pre><code>Warning: &lt;anonymous&gt;: ... may be used in an incorrect context: &#39;.fun(piece, ...)&#39;
+
+Warning: &lt;anonymous&gt;: ... may be used in an incorrect context: &#39;.fun(piece, ...)&#39;</code></pre>
 <pre class="r"><code># Shut down the cluster
 parallel::stopCluster(cl)</code></pre>
 <p>The same result can be accomplished with a single call to <code><a target='_blank' href='rd.html#pddply'>pddply()</a></code>, without the spurious warning:</p>
@@ -730,7 +734,7 @@ plotFun(fList,
         col = c(&quot;Red&quot;, &quot;Black&quot;, &quot;Blue&quot;), 
         xlab = &quot;x&quot;, ylab = expression(f(x)),
         main = &quot;Beta Densities&quot;)</code></pre>
-<p><img src="index_files/figure-html/plotFun-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/plotFun-1.png" width="624" /></p>
 </div>
 <div id="create-naturally-spaced-time-axes" class="section level2">
 <h2>Create naturally spaced time axes</h2>
@@ -741,7 +745,7 @@ plotFun(fList,
 par(las = 2, mar = c(4, 4, 1, 0.5))
 
 plot(timeData, xlab = &quot;&quot;, col = &quot;Blue&quot;)</code></pre>
-<p><img src="index_files/figure-html/smartTimeAxis1-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/smartTimeAxis1-1.png" width="624" /></p>
 <p>And here’s the same plot using <code><a target='_blank' href='rd.html#smarttimeaxis'>smartTimeAxis()</a></code>. Notice the intervals are 5 minutes apart, in a natural sequence (i.e., 0, 5, 10, …) as opposed to something less natural (e.g., 2, 7, 12, …):</p>
 <pre class="r"><code>par(las = 2, mar = c(4, 4, 1, 0.5))
 
@@ -752,7 +756,7 @@ axis(2)
 
 # Add the time axis
 smartTimeAxis(timeData$time, nticks = 20, time.format = &quot;hh:mm&quot;)</code></pre>
-<p><img src="index_files/figure-html/smartTimeAxis2-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/smartTimeAxis2-1.png" width="624" /></p>
 </div>
 <div id="draw-a-vertical-error-bar" class="section level2">
 <h2>Draw a vertical error bar</h2>
@@ -765,7 +769,7 @@ plot(x, y, pch = as.character(1:9), ylim = c(-2, 2) + range(y),
      
 # Draw the error bars
 vertErrorBar(x, 0.3, center = y, barLength = 2 * 1.96, blankMiddle = 0.75)</code></pre>
-<p><img src="index_files/figure-html/vertErrorBar2-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/vertErrorBar2-1.png" width="624" /></p>
 </div>
 </div>
 <div id="statistical-functions" class="section level1">
@@ -796,7 +800,7 @@ y2 &lt;- pcbinom(x, 10, 0.5)
 plot(x, y1, type = &quot;s&quot;, col = &quot;Blue&quot;, xlab = &quot;x&quot;, ylab = &quot;F(x)&quot;)
 lines(x, y2, col = &quot;Red&quot;)
 legend(&quot;topleft&quot;, c(&quot;pbinom()&quot;, &quot;pcbinom()&quot;), lty = 1, col = c(&quot;Blue&quot;, &quot;Red&quot;))</code></pre>
-<p><img src="index_files/figure-html/pcbinom2-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/pcbinom2-1.png" width="624" /></p>
 </div>
 <div id="highest-posterior-density-credible-interval" class="section level2">
 <h2>Highest posterior density credible interval</h2>
@@ -821,7 +825,7 @@ $prob
 [1] 0.9500001</code></pre>
 <pre class="r"><code># Plot the interval with the density
 plot(hpdInt)</code></pre>
-<p><img src="index_files/figure-html/hpd1-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/hpd1-1.png" width="624" /></p>
 </div>
 <div id="umvues-of-lognormal-parameters" class="section level2">
 <h2>UMVUEs of lognormal parameters</h2>
@@ -906,10 +910,10 @@ smooth_x &lt;- movAvg2(x, bw = 5, type = &quot;g&quot;)
 # Overlay smoothed series on the original data
 plot(1:50, x, type = &quot;b&quot;, col = &quot;Black&quot;, xlab = &quot;Index&quot;, ylab = &quot;x&quot;)
 lines(1:50, smooth_x, col = &quot;Blue&quot;, lwd = 3)</code></pre>
-<p><img src="index_files/figure-html/movAvg2_1-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/movAvg2_1-1.png" width="624" /></p>
 <p>And let’s look at a plot of the weights that we used above:</p>
 <pre class="r"><code>plot(smooth_x)</code></pre>
-<p><img src="index_files/figure-html/movAvg2_2-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/movAvg2_2-1.png" width="624" /></p>
 </div>
 <div id="cumulative-sum-charts-cusum" class="section level2">
 <h2>Cumulative sum charts (Cusum)</h2>
@@ -919,7 +923,7 @@ y &lt;- cusum(rnorm(25), k = 0.2, h = 2)
 
 # Plot results
 plot(y, main = &quot;Upper Cusum chart of a standard normal variate&quot;, las = 1)</code></pre>
-<p><img src="index_files/figure-html/cusum-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/cusum-1.png" width="624" /></p>
 </div>
 <div id="align-two-time-series" class="section level2">
 <h2>Align two time series</h2>
@@ -976,7 +980,7 @@ timeIntegration(PowerData,
                 upper = &quot;5/6/2008 17:01:36&quot;,
                 units = &quot;hours&quot;,
                 check.plot = TRUE)</code></pre>
-<p><img src="index_files/figure-html/timeInt1-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/timeInt1-1.png" width="624" /></p>
 <pre><code>[1] 0.1247488</code></pre>
 <p>More generally, <code><a target='_blank' href='rd.html#timeintegration'>timeIntegration()</a></code> will approximate the area under any “curve” defined by the linear interpolation of data points, where the units of the domain is time.</p>
 </div>
@@ -1052,7 +1056,7 @@ findDepMat(Y)</code></pre>
 <p>As a simple example, let’s look at the pdf of a Beta distribution:</p>
 <pre class="r"><code>f &lt;- function(x) dbeta(x, 5, 5)
 plotFun(f, c(0, 1), col = &quot;Blue&quot;)</code></pre>
-<p><img src="index_files/figure-html/integ1-1.png" title="" alt="" width="624" /></p>
+<p><img src="index_files/figure-html/integ1-1.png" width="624" /></p>
 <p>Integration using Simpson’s approximation:</p>
 <pre class="r"><code>integ(f(seq(0, 0.3, length = 1001)), a = 0, b = 0.3)</code></pre>
 <pre><code>[1] 0.09880866</code></pre>
@@ -1103,7 +1107,8 @@ linearMap(x, R = c(-1, 0))</code></pre>
                 <p>&copy; Battelle Memorial Institute, 2016</p>
               </div>
       <div class="col-md-6">
-        <p class="pull-right">created with <a href="https://github.com/hafen/packagedocs">packagedocs</a></p>
+        <p class="pull-right">created with <a href="https://github.com/hafen/packagedocs">packagedocs</a>
+                  </p>
       </div>
     </div>
   </div>
