--- a/rd.html
+++ b/rd.html
@@ -9,7 +9,7 @@
   
   <title>Smisc</title>
 
-    <script src="assets/jquery-1.11.0/jquery.min.js"></script>
+    <script src="assets/jquery-1.11.3/jquery.min.js"></script>
   <link href="assets/bootstrap-3.3.2/css/bootstrap.min.css" rel="stylesheet" />
   <script src="assets/bootstrap-3.3.2/js/bootstrap.min.js"></script>
   <script src="assets/bootstrap-3.3.2/shim/html5shiv.min.js"></script>
@@ -19,6 +19,9 @@
   <link href="assets/fontawesome-4.3.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="assets/stickykit-1.1.1/sticky-kit.min.js"></script>
   <script src="assets/jqueryeasing-1.3/jquery.easing.min.js"></script>
+  <link href="assets/recliner-0.2.2/recliner.css" rel="stylesheet" />
+  <script src="assets/recliner-0.2.2/recliner.min.js"></script>
+  <script src="assets/recliner-0.2.2/onload.js"></script>
   <link href="assets/packagedocs-0.0.1/pd.css" rel="stylesheet" />
   <script src="assets/packagedocs-0.0.1/pd.js"></script>
   <script src="assets/packagedocs-0.0.1/pd-collapse-toc.js"></script>
@@ -182,7 +185,7 @@ Sego Miscellaneous
 <strong>Authors:</strong> <a href="mailto:Landon.Sego@pnnl.gov">Landon Sego</a> [aut, cre]
 </p>
 <p>
-<strong>Version:</strong> 0.3.5
+<strong>Version:</strong> 0.3.6
 </p>
 <p>
 <strong>License:</strong> BSD_3_clause + file LICENSE
@@ -191,7 +194,7 @@ Sego Miscellaneous
 Description
 </h4>
 <p>
-A collection of functions for statistical computing and data manipulation in R.
+A collection of functions for statistical computing and data manipulation in R. Includes routines for data ingestion, operating on dataframes and matrices, conversion to and from lists, converting factors, filename manipulation, programming utilities, parallelization, plotting, statistical and mathematical operations, and time series.
 </p>
 <h4>
 Depends
@@ -2148,8 +2151,9 @@ The time units of the elapsed time
 Examples
 </h4>
 <pre class="r"><code># We can assign the object within the call to timeIt():
-timeIt(x1 <- rnorm(10^7))
+timeIt(x1 <- rnorm(10^6))
 str(x1)
+
 
 # We can just run the expression without assigning it to anything
 timeIt(rnorm(10^7), units = "m")
@@ -2703,6 +2707,7 @@ Examples
 </h4>
 <pre class="r"><code>X <- data.frame(a = 1:3, b = letters[1:3])
 
+
 # Function that will operate on each of x, producing a simple list
 test.1 <- function(x) {
   list(ab = paste(x$a, x$b, sep = "-"), a2 = x$a^2, bnew = paste(x$b, "new", sep = "."))
@@ -2720,6 +2725,7 @@ test.2 <- function(x) {
 }
 
 dfplapply(X, test.2, output.df = TRUE, njobs = 2, verbose = TRUE)
+
 
 # Passing in other objects needed by FUN
 a.out <- 10
@@ -2835,6 +2841,7 @@ Examples
 </h4>
 <pre class="r"><code>data(baseball, package = "plyr")
 
+
 # Summarize the number of entries for each year in the baseball dataset with 2 jobs
 o1 <- pddply(baseball, ~ year, nrow, njobs = 2)
 head(o1)
@@ -2843,11 +2850,14 @@ head(o1)
 o2 <- plyr::ddply(baseball, ~ year, nrow)
 identical(o1, o2)
 
+
 # Another possibility
 o3 <- pddply(baseball, "lg", c("nrow", "ncol"), njobs = 2)
 o3
+
 o4 <- plyr::ddply(baseball, "lg", c("nrow", "ncol"))
 identical(o3, o4)
+
 
 # A nonsense example where we need to pass objects and packages into the cluster
 number1 <- 7
@@ -2861,9 +2871,9 @@ o5 <- pddply(baseball[1:100,], "year", f, number2 = 13, njobs = 2,
             .paropts = list(.packages = "Smisc", .export = "number1"))
 o5
 
+
 # Non parallel
 o6 <- plyr::ddply(baseball[1:100,], "year", f, number2 = 13)
-
 identical(o5, o6)</code></pre>
 <h4>
 See also
@@ -3529,6 +3539,7 @@ dkbinom(c(0, 4, 7), c(3, 4, 2), c(0.3, 0.5, 0.8), method = "b")
 pkbinom(c(0, 4, 7), c(3, 4, 2), c(0.3, 0.5, 0.8))
 pkbinom(c(0, 4, 7), c(3, 4, 2), c(0.3, 0.5, 0.8), method = "b")
 
+ 
 # Compare the output of the 3 methods
 pkbinom(4, c(3, 4, 2), c(0.3, 0.5, 0.8), method = "fft")
 pkbinom(4, c(3, 4, 2), c(0.3, 0.5, 0.8), method = "butler")
@@ -3814,11 +3825,13 @@ int <- hpd(dnorm, c(-5,5), prob = 0.90, njobs = 2)
 print(int)
 plot(int)
 
+
 # A credible interval with the gamma density
 int <- hpd(function(x) dgamma(x, shape = 2, rate = 0.5), c(0, 20),
            cdf = function(x) pgamma(x, shape = 2, rate = 0.5), prob = 0.8)
 print(int)
 plot(int)
+
 
 # A credible interval using the Beta density
 dens <- function(x) dbeta(x, 7, 12)
@@ -5196,7 +5209,8 @@ Examples
                 <p>&copy; Battelle Memorial Institute, 2016</p>
               </div>
       <div class="col-md-6">
-        <p class="pull-right">created with <a href="https://github.com/hafen/packagedocs">packagedocs</a></p>
+        <p class="pull-right">created with <a href="https://github.com/hafen/packagedocs">packagedocs</a>
+                  </p>
       </div>
     </div>
   </div>
