--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
   <link href="assets/fontawesome-4.3.0/css/font-awesome.min.css" rel="stylesheet" />
   <script src="assets/stickykit-1.1.1/sticky-kit.min.js"></script>
   <script src="assets/jqueryeasing-1.3/jquery.easing.min.js"></script>
-  <link href="assets/recliner-0.2.2/recliner.css" rel="stylesheet" />
-  <script src="assets/recliner-0.2.2/recliner.min.js"></script>
-  <script src="assets/recliner-0.2.2/onload.js"></script>
   <link href="assets/packagedocs-0.0.1/pd.css" rel="stylesheet" />
   <script src="assets/packagedocs-0.0.1/pd.js"></script>
   <script src="assets/packagedocs-0.0.1/pd-collapse-toc.js"></script>
@@ -444,7 +441,7 @@ as.numericSilent(y)</code></pre>
 <h2>Embed a timestamp in a filename</h2>
 <p><code><a target='_blank' href='rd.html#timestamp'>timeStamp()</a></code> embeds a the current date and time into the name of a file.</p>
 <pre class="r"><code>timeStamp(&quot;thisFile&quot;, &quot;txt&quot;)</code></pre>
-<pre><code>[1] &quot;thisFile_2016-06-22_223325.txt&quot;</code></pre>
+<pre><code>[1] &quot;thisFile_2017-11-15_221150.txt&quot;</code></pre>
 </div>
 <div id="pad-a-numeric-value-with-zeros" class="section level2">
 <h2>Pad a numeric value with zeros</h2>
@@ -573,7 +570,7 @@ aFunction(-1, a = 7)</code></pre>
 <h2>Time the execution of an expression</h2>
 <p><code><a target='_blank' href='rd.html#timeit'>timeIt()</a></code> times the execution of an R expression, where the default unit of time depends on how long the expression runs, i.e., if it runs for hours, time is measured in hours; if it runs in seconds, time is measured in seconds, etc.</p>
 <pre class="r"><code>y &lt;- timeIt(mean(rnorm(10^7)))</code></pre>
-<pre><code>0.94 seconds </code></pre>
+<pre><code>1.66 seconds </code></pre>
 <pre class="r"><code>y</code></pre>
 <pre><code>[1] 2.524102e-05</code></pre>
 </div>
@@ -689,7 +686,7 @@ x &lt;- rnorm(4)
      
 # Calculate the cummulative probability using 2 cores
 doCallParallel(pnorm, x, njobs = 2)</code></pre>
-<pre><code>[1] 0.6261153 0.8974142 0.1532596 0.6741026</code></pre>
+<pre><code>[1] 0.7040434 0.3546746 0.0468986 0.9455995</code></pre>
 </div>
 <div id="parse-job-tasks-into-groups" class="section level2">
 <h2>Parse job tasks into groups</h2>
@@ -867,10 +864,10 @@ $dt
 [1] &quot;1782-09-17 16:31&quot;
 
 $dt.posix
-[1] &quot;1782-09-17 16:31:00 LMT&quot;
+[1] &quot;1782-09-17 16:31:00 MST&quot;
 
 $date.posix
-[1] &quot;1782-09-17 LMT&quot;</code></pre>
+[1] &quot;1782-09-17 MST&quot;</code></pre>
 </div>
 <div id="calculate-a-moving-window-dot-product" class="section level2">
 <h2>Calculate a moving window dot product</h2>
@@ -917,7 +914,7 @@ lines(1:50, smooth_x, col = &quot;Blue&quot;, lwd = 3)</code></pre>
 </div>
 <div id="cumulative-sum-charts-cusum" class="section level2">
 <h2>Cumulative sum charts (Cusum)</h2>
-<p><code><a target='_blank' href='rd.html#cusum'>cusum()</a></code> will calculate the Cusum statistics for a cumulative sum chart of the form <span class="math inline"><em>C</em>[<em>i</em>] = <em>m</em><em>a</em><em>x</em>(0, <em>C</em>[<em>i</em> − 1] + <em>X</em>[<em>i</em>] − <em>k</em>)</span> that signals when <span class="math inline"><em>C</em>[<em>i</em>] &gt; <em>h</em></span>. Here’s a simple example:</p>
+<p><code><a target='_blank' href='rd.html#cusum'>cusum()</a></code> will calculate the Cusum statistics for a cumulative sum chart of the form <span class="math inline"><em>C</em>[<em>i</em>]=<em>m</em><em>a</em><em>x</em>(0, <em>C</em>[<em>i</em> − 1]+<em>X</em>[<em>i</em>]−<em>k</em>)</span> that signals when <span class="math inline"><em>C</em>[<em>i</em>]&gt;<em>h</em></span>. Here’s a simple example:</p>
 <pre class="r"><code># Calculate the Cusum
 y &lt;- cusum(rnorm(25), k = 0.2, h = 2)
 
@@ -1104,11 +1101,10 @@ linearMap(x, R = c(-1, 0))</code></pre>
   <div id="footer">
     <div class="container">
       <div class="col-md-6">
-                <p>&copy; Battelle Memorial Institute, 2016</p>
+                <p>&copy; Battelle Memorial Institute, 2017</p>
               </div>
       <div class="col-md-6">
-        <p class="pull-right">created with <a href="https://github.com/hafen/packagedocs">packagedocs</a>
-                  </p>
+        <p class="pull-right">created with <a href="https://github.com/hafen/packagedocs">packagedocs</a></p>
       </div>
     </div>
   </div>
