--- a/rd.html
+++ b/rd.html
@@ -185,7 +185,7 @@ Sego Miscellaneous
 <strong>Version:</strong> 0.3.8
 </p>
 <p>
-<strong>License:</strong> <a href=https://opensource.org/licenses/BSD-3-Clause>BSD_3_clause</a> + <a href='LICENSE'>LICENSE</a>
+<strong>License:</strong> <a href=https://opensource.org/licenses/BSD-3-Clause>BSD_3_clause</a> + <a href='LICENSE.txt'>LICENSE</a>
 </p>
 <h4>
 Description
@@ -4849,7 +4849,7 @@ a vector with 2 elements indicating the range of the linear mapping. <code>R[1]<
 Details
 </h4>
 <p class="rd-p">
-The mapping is <code class = eq>f : D R</code>, where <code class = eq>f(D[1]) = R[1]</code> and <code class = eq>f(D[2]) = R[2]</code>.
+The mapping is <code class = eq>f : D –&gt; R</code>, where <code class = eq>f(D[1]) = R[1]</code> and <code class = eq>f(D[2]) = R[2]</code>.
 </p>
 <h4>
 Value
