Update link to 'BSD_3_clause'

--- a/rd.html
+++ b/rd.html
@@ -185,7 +185,7 @@ Sego Miscellaneous
 <strong>Version:</strong> 0.3.9
 </p>
 <p>
-<strong>License:</strong> <a href=https://opensource.org/licenses/BSD-3-Clause>BSD_3_clause</a> + <a href='LICENSE.txt'>LICENSE</a>
+<strong>License:</strong> <a href=https://cran.r-project.org/web/licenses/BSD_3_clause>BSD_3_clause</a> + <a href='LICENSE.txt'>LICENSE</a>
 </p>
 <h4>
 Description
